--- a/src/templates/forms.html
+++ b/src/templates/forms.html
@@ -4,13 +4,34 @@
 -->
 
 {% block content %}
+<style>
+    {% block style %}
+    .navbar-static-top {
+        margin-bottom: 0px !important;
+    }
+    
+    .jumbotron {
+        background-color: rgba(108,1,1,1);
+        color: ivory;
+    }
+    {% endblock %}
+</style>
 
 {% if title %}
-<div class='row'>
+<div class='jumbotron'>
+    <div class="container">
+        <div class="row">
+            <div class='col-sm-6'>
+                <h1>{{ title }}</h1>
+            </div>
+        </div>
+    </div>
+</div>
+<!--<div class='row'>
     <div class='col-sm-6 col-sm-offset-3'>
         <h1>{{ title }}</h1>
     </div>
-</div>
+</div>-->
 {% endif %}
 
 <div class='row'>
