--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -15,8 +15,10 @@
               <!--<li><a href="/">Home</a></li>-->
               <li><a href="{% url 'articles' %}">Journal</a></li>
               <li><a href="{% url 'photos' %}">Photos</a></li>
+              <li><a href="{% url 'videos' %}">Videos</a></li>
               <li><a href="{% url 'about' %}">About</a></li>
               <li><a href="{% url 'contact' %}">Contact</a></li>
+              
               
               
               <!--<li class="dropdown">
