--- a/src/templates/videos.html
+++ b/src/templates/videos.html
@@ -26,4 +26,12 @@
     </div>
 </div>
 
+<div class='row col-sm-10 col-sm-offset-1'>
+    <h1>Previous Projects I worked on:</h1>
+    <h3>Android App</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/GcXb3mIxMyk" frameborder="0" allowfullscreen></iframe>"<br/>
+    <h3>3D Animation</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/kCXW1RH8Ufw?list=PL9WqVaXX10Dn1YU4Nk8wEyrzCRNXWzMC1" frameborder="0" allowfullscreen></iframe>
+</div>
+
 {% endblock %}
