--- a/src/templates/photos.html
+++ b/src/templates/photos.html
@@ -22,13 +22,37 @@
         <div class="row">
             <div class='col-sm-6'>
                 <h1>Gallery</h1>
+                <h3>- Places I Have Been</h3>
             </div>
         </div>
     </div>
 </div>
 
-<div class='row col-sm-8'>
-            <img src="{% static 'img/DSC_9164.JPG' %}" class='img-responsive' />
+<div>
+    <img src="{% static 'img/DSC_8852.JPG' %}" class='img-responsive' />
 </div>
 
+<div class='col-sm-7'>
+    <img src="{% static 'img/DSC_8938.JPG' %}" class='img-responsive' />
+</div>
+
+<div class='col-sm-5'>
+    <img src="{% static 'img/DSC_8869.JPG' %}" class='img-responsive' />
+</div>
+
+<div class='col-sm-5'>
+    <img src="{% static 'img/DSC_9164.JPG' %}" class='img-responsive' />
+</div>
+
+<div class='col-sm-5'>
+    <img src="{% static 'img/DSC_9290.JPG' %}" class='img-responsive' />
+</div>
+
+<div class='col-sm-6'>
+    <img src="{% static 'img/dsc_8894.jpg' %}" class='img-responsive' />
+</div>
+
+<div class='col-sm-6'>
+    <img src="{% static 'img/dsc_8952.jpg' %}" class='img-responsive' />
+</div>
 {% endblock %}
