--- a/src/templates/articles.html
+++ b/src/templates/articles.html
@@ -19,7 +19,7 @@
 <div class='jumbotron'>
     <div class="container">
         <div class="row">
-            <div>
+            <div class='col-sm-6'>
                 <h1>My Thoughts</h1>
             </div>
         </div>
