--- a/src/templates/videos.html
+++ b/src/templates/videos.html
@@ -19,15 +19,15 @@
 <div class='jumbotron'>
     <div class="container">
         <div class="row">
-            <div>
+            <div class='col-sm-6'>
                 <h1>Videos</h1>
+                <h3>- Projects I worked on:</h3>
             </div>
         </div>
     </div>
 </div>
 
 <div class='row col-sm-10 col-sm-offset-1'>
-    <h1>Previous Projects I worked on:</h1>
     <h3>Android App</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/GcXb3mIxMyk" frameborder="0" allowfullscreen></iframe>"<br/>
     <h3>3D Animation</h3>
