--- a/src/templates/articles.html
+++ b/src/templates/articles.html
@@ -28,8 +28,17 @@
 
 <div class='container'>
     <div class='col-sm-10 col-sm-offset-1'>
-        <h2>Example 1</h2>
-        <p class='lead'>fownvuebriubdjsbi</p>
+        <h2>Django</h2>
+        <p class='lead'>Django's primary goal is to ease the creation of complex, database-driven websites. Django emphasizes reusability and "pluggability" of components, rapid development, and the principle of don't repeat yourself. Python is used throughout, even for settings, files, and data models. Django also provides an optional administrative create, read, update and delete interface that is generated dynamically through introspection and configured via admin models.</p>
+        <p class='pull-right'>Wikipedia</p>
+    </div>
+</div>
+
+<div class='container'>
+    <div class='col-sm-10 col-sm-offset-1'>
+        <h2>Bootstrap</h2>
+        <p class='lead'>Bootstrap is a free and open-source collection of tools for creating websites and web applications. It contains HTML- and CSS-based design templates for typography, forms, buttons, navigation and other interface components, as well as optional JavaScript extensions. It aims to ease the development of dynamic websites and web applications.</p>
+        <p class='pull-right'>Wikipedia</p>
     </div>
 </div>
 
